force-app/main/default/objects/StockChangeLog__c/StockChangeLog__c.object-meta.xml
<CustomObject>
    <label>재고변경내역</label>
    <nameField>
        <displayFormat>ST-{00000000}</displayFormat>
        <label>재고변경내역번호</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>