force-app/main/default/objects/StockChangeLog__c/fields/BATCH__c.field-meta.xml
<CustomField>
    <fullName>BATCH__c</fullName>
    <label>배치번호</label>
    <length>10</length>
    <type>Text</type>
</CustomField>