force-app/main/default/objects/StockChangeLog__c/fields/ChangeQuantity__c.field-meta.xml
<CustomField>
    <fullName>ChangeQuantity__c</fullName>
    <label>변경수량</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>