force-app/main/default/objects/StockChangeLog__c/fields/MAT_TYP__c.field-meta.xml
<CustomField>
    <fullName>MAT_TYP__c</fullName>
    <label>상품유형</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>원자재</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>완제품</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>