force-app/main/default/objects/StockChangeLog__c/fields/STOCK__c.field-meta.xml
<CustomField>
    <fullName>STOCK__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>재고</label>
    <referenceTo>STOCK__c</referenceTo>
    <relationshipLabel>재고변경내역</relationshipLabel>
    <relationshipName>StockChangeLog</relationshipName>
    <type>Lookup</type>
</CustomField>