force-app/main/default/objects/StockChangeLog__c/fields/STOCKKEY__c.field-meta.xml
<CustomField>
    <fullName>STOCKKEY__c</fullName>
    <label>재고키</label>
    <length>40</length>
    <type>Text</type>
</CustomField>