force-app/main/default/objects/StockChangeLog__c/fields/StockQuantity__c.field-meta.xml
<CustomField>
    <fullName>StockQuantity__c</fullName>
    <label>기존수량</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>