force-app/main/default/objects/StockChangeLog__c/fields/stocktakingDate__c.field-meta.xml
<CustomField>
    <fullName>stocktakingDate__c</fullName>
    <label>실사일</label>
    <type>Date</type>
</CustomField>