force-app/main/default/objects/StockChangeLog__c/fields/zreturn__c.field-meta.xml
<CustomField>
    <fullName>zreturn__c</fullName>
    <label>자재문서번호</label>
    <length>10</length>
    <type>Text</type>
</CustomField>