force-app/main/default/objects/StockChangeLog__c/listViews/StockChangeLog_ALL.listView-meta.xml
<ListView>
    <fullName>StockChangeLog_ALL</fullName>
    <columns>NAME</columns>
    <columns>zreturn__c</columns>
    <columns>xmsgs__c</columns>
    <columns>MAKTX__c</columns>
    <columns>MATNR__c</columns>
    <columns>StockQuantity__c</columns>
    <columns>ChangeQuantity__c</columns>
    <columns>Action__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>전체 재고변경내역</label>
</ListView>