force-app/main/default/objects/StockChangeLog__c/listViews/Today_StockTaking_Material.listView-meta.xml
<ListView>
    <fullName>Today_StockTaking_Material</fullName>
    <columns>NAME</columns>
    <columns>zreturn__c</columns>
    <columns>xmsgs__c</columns>
    <columns>MAKTX__c</columns>
    <columns>MATNR__c</columns>
    <columns>StockQuantity__c</columns>
    <columns>ChangeQuantity__c</columns>
    <columns>Action__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>이번달 재고변경내역</label>
</ListView>